--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Aplicativo"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBqQRZmoMC3mL30IdbqHAknUxii6mv2mKA" />
         <activity
             android:name=".rastreio.telaRastreio"
             android:exported="false" />
