--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
 
@@ -15,9 +17,12 @@
         android:theme="@style/Theme.Aplicativo"
         tools:targetApi="31">
 
+
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBqQRZmoMC3mL30IdbqHAknUxii6mv2mKA" />
+
         <activity
             android:name=".rastreio.telaRastreio"
             android:exported="false" />
@@ -33,6 +38,7 @@
         <activity
             android:name=".home.Localizacao"
             android:exported="false" />
+
         <activity
             android:name=".home.MainActivity"
             android:exported="false" />
@@ -50,6 +56,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
